@@ -8,12 +8,12 @@ public class ConvertFuncTest {
     @Test
     public void testRegularImplementation() {
         IConvertFunc<String, Integer> obj = new ConvertFuncImpl();
-        assertEquals(obj.convert("100"), new Integer(100));
+        assertEquals(obj.convert("100"), Integer.valueOf(100));
     }
 
     @Test
     public void testMethodRefImplementation() {
         ConvertFuncImplViaMethodRef obj = new ConvertFuncImplViaMethodRef();
-        assertEquals(obj.convertWithIntegerValueOf("100"), new Integer(100));
+        assertEquals(obj.convertWithIntegerValueOf("100"), Integer.valueOf(100));
     }
 }
